--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   padding: 0px;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family: Arial, sans-serif;
 }
 
 /* creating font face  */
@@ -219,7 +220,7 @@ html {
   background-size: cover;
   display: flex;
   align-items: right;
-  padding-left: 20%;
+  padding-left: 10%;
 }
 
 .slide-details {
@@ -726,7 +727,7 @@ html {
 .footer {
   width: 100%;
   margin-top: 60px;
-  padding: 30px 20%;
+  padding: 20px 10% 5%;
   background-color: #f6f5fa;
   font-family: "futura";
   display: flex;
@@ -1335,6 +1336,7 @@ main {
   display: flex;
   justify-content: center;
   padding-top: 1px;
+
 }
 
 .tabs {
@@ -1344,7 +1346,10 @@ main {
   border: 2px solid black !important;
   border-radius: 999px;
   background-color: white;
-  padding: 0;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .tab {
@@ -1354,13 +1359,13 @@ main {
 .tab a {
   text-decoration: none;
   color: black;
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   text-transform: uppercase;
   font-size: 16px;
   display: block;
   transition: color 0.3s ease;
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
 
 .tab a:hover {
