--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: Arial, sans-serif;
     /* scroll-behavior: smooth; */
 }
 
@@ -167,7 +168,7 @@ h2 {
 
 .footer {
     width: 100%;
-    padding: 30px 20%;
+    padding: 30px 20% 5%;
     gap: 100px;
     background-color: #f6f5fa;
     font-family: 'futura';
@@ -212,7 +213,7 @@ h2 {
     margin-top: 20px;
     display: flex;
     font-size: 20px;
-    column-gap: 30px;
+    column-gap: 20px;
 
 }
 
